tests/suite/fail/generated/borrow/fail_mut_assign_borrow_1.ny
fn main() {
    let mut v = 1
    let r = &v
    v = v + 1 //~ ERROR because it is borrowed
    print(r)
}
